--- a/src/pages/toDoList/toDoList.scss
+++ b/src/pages/toDoList/toDoList.scss
@@ -1,5 +1,5 @@
-@import "../pages/styles/common.scss";
-@import "../pages/styles/reset.scss";
+@import "../styles/common.scss";
+@import "../styles/reset.scss";
 
 .toDoList {
     width: 500px;
@@ -25,18 +25,18 @@
         padding: 10px;
         text-align: center;
 
-        #input {
+        input {
             width: 80%;
             height: 30px;
             margin-right: 5px;
             border: 2px solid rgb(54, 52, 50);
             border-radius: 4px;
         }
-        #input::placeholder {
+        input::placeholder {
             padding-left: 12px;
         }
 
-        #btn {
+        button {
             width: 40px;
             height: 30px;
             color: #fafafa;
@@ -45,13 +45,13 @@
             border-radius: 4px;
             cursor: pointer;
         }
-        #btn:hover {
+        button:hover {
             background-color: #1565c0;
             border: 2px solid #1565c0;
         }
     }
 
-    .addList {
+    .ul {
         max-width: 450px;
         width: 100%;
         margin: 10px auto 10px;
